# obda.net

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODEOWNERS  LICENSE.md  README.md  fabfile.py  obda.net.wsgi  obda.py  pyproject.toml  renovate.json  requirements.txt
pages/: about.md  error-403.md  error-404.md
pages/blog/: 2021-nfl-regular-season-schedule.md  2022-nfl-regular-season-schedule.md  2023-nfl-regular-season-schedule.md  2024-nfl-regular-season-schedule.md  2025-nfl-regular-season-schedule.md  automatically-run-commands-with-inotifywait.md  convert-filenames-recursively-to-lowercase.md  convert-px-to-rem-with-sass.md  custom-css-and-js-for-sphinx-generated-documentation.md  default-file-permissions-for-a-directory.md  delete-mysql-binary-logs.md  export-postgres-table-to-csv.md  finding-all-loggers-in-python.md  git-push-to-multiple-remotes.md  gitignore-per-branch.md  ignore-join-part-quit-messages-in-weechat.md  install-windows-10-on-a-linux-laptop.md  microsofts-natural-ergonomic-keyboard-4000-and-its-zoom-slider.md  postgresql-create-user-and-database.md  query-mysql-table-sizes.md  redirect-stdin-in-a-shell-script.md  register-an-irc-channel-on-freenode.md  rotate-a-video-with-ffmpeg.md  simple-local-webserver-with-python.md  tweaking-gentoos-greeting-message.md  upgrade-postgresql-from-9.4-to-9.5.md  zsh-glob-qualifiers.md  zsh-history-expansion.md  zsh-line-editor-shortcuts.md
static/css/: fonts.css  pygments.css  screen.css
static/files/: clemens.kaposi.2024-01-25.gnupg.pub.asc  clemens.kaposi.gnupg.pub.asc
static/fonts/: Inconsolata-Bold.eot  Inconsolata-Regular.eot  Merriweather-BoldItalic.eot  Merriweather-Heavy.eot  Merriweather-HeavyItalic.eot  Merriweather-Light.eot  Merriweather-LightItalic.eot
templates/: archives.xhtml  cheat-sheet.md  figure.xhtml  gentoo-disclaimer.md  index.xhtml  layout.xhtml  macros.xhtml  page.xhtml  tag.xhtml  tags.xhtml
