[tool.poetry]
name = "obda.net"
version = "2.0.0"
description = ""
authors = ["Clemens Kaposi <clemens@kaposi.name>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
Flask-FlatPages = "^0.8.1"
Flask-Gravatar = "^0.5.0"
Pygments = "^2.15.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
fabric = "^2.5.0"
xenon = "^0.9.0"
ruff = "^0.0.261"

[tool.black]
line-length = 79
target-version = ["py310"]
include = "\\.(py|wsgi)$"

[tool.ruff]
line-length = 79
select = ["ALL"]
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "pep257"

[build-system]
requires = ["poetry~=1.4.2"]
build-backend = "poetry.masonry.api"
