[tool.poetry]
name = "obda.net"
version = "2.0.0"
description = ""
authors = ["Clemens Kaposi <clemens@kaposi.name>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
Flask-FlatPages = "^0.8.1"
Pygments = "^2.15.0"
sentry-sdk = {version = "^1.19.1", extras = ["flask"]}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
fabric = "^3.0.0"
xenon = "^0.9.0"
ruff = "^0.1.6"
pre-commit = "^3.2.2"

[tool.poetry.group.server]
optional = true

[tool.poetry.group.server.dependencies]
gunicorn = "^21.0.0"

[tool.black]
line-length = 79
target-version = ["py311"]
include = "\\.(py|wsgi)$"

[tool.ruff]
line-length = 79
target-version = "py311"
select = ["ALL"]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "D103",  # Missing docstring in public function.  TODO: add missing docs
    "PTH",  # User Pathlib instead of os.*.  TODO: migrate to Pathlib
]

[tool.ruff.pydocstyle]
convention = "pep257"

[build-system]
requires = ["poetry~=1.4.2"]
build-backend = "poetry.masonry.api"
